# ViPER-compiler

./: .gitignore  .ocamlformat  .ocamlformat-ignore  LICENSE  Makefile  README.md  _tags  dune  dune-project  exprs.ml  init.sh  run  viper.opam
.github/: CODEOWNERS
.github/workflows/: _build_and_test.yaml  main.yaml  manual.yaml  pr.yaml  publish-syntax-highlighting.yaml  syntax-highlighting-pr.yaml
archive/: README.md  init.sh
archive/_initial-setup-1/: .gitignore  functions.ml  hello.ml  max.ml  test.ml
archive/_initial-setup-2/: expr.ml  test.ml
archive/adder/: .gitignore  Makefile  main.ml  run
archive/boa/: .gitignore  Makefile  pretty.ml  runner.ml  test.ml
archive/cobra/: dune  errors.ml  exprs.ml  gen_tests.py  main.c  main.ml  phases.ml  run  runner.ml  test.ml
archive/diamondback/: Makefile  assembly.ml  dune  errors.ml  exprs.ml  phases.ml  pretty.ml  test.ml
archive/diamondback/input/do_err/: arity_greater_than.err
archive/diamondback/input/do_pass/: let_shadow.diamond  ocsh.diamond  self_rec.diamond
archive/diamondback/input/dont_pass/: fib.diamond  fib.out  hang.diamond
archive/egg-eater/: .gitignore  (+7 more)
assignment-0/: Makefile  dune  functions.ml  hello.ml  max.ml  test  test.ml
assignment-1/: Makefile  dune  expr.ml  run  sexp.ml  test.ml
assignment-10/: Makefile  compile.ml  dune  exprs.ml  gc.c  gen_tests.py  graph.ml  main.c  pretty.ml  test.ml
assignment-2/: README.md  compile.ml  run  runner.ml  sexp.ml  test.ml
assignment-3/: README.md  compile.ml  exprs.ml  main.ml  run  test.ml
assignment-4/: Makefile  README.md  assembly.ml  compile.ml  dune  errors.ml  gen_tests.py  main.c  pretty.ml  run  test.ml
assignment-5/: .gitignore  README.md  assembly.ml  compile.ml  dune  exprs.ml  main.c  main.ml  run  runner.ml  test.ml
assignment-6/: .gitignore  .ocamlformat  Makefile  assembly.ml  compile.ml  dune  errors.ml  gen_tests.py  main.c  pretty.ml  run  test.ml
assignment-7/: compile.ml  phases.ml  test.ml
assignment-8/: assembly.ml  compile.ml  desugar.ml  dune  exprs.ml  gen_tests.py  main.c  pretty.ml  runner.ml  test.ml  wellformed.ml
assignment-8/input/do_err/: add1_tup.fdl  greater_tup_second.fdl  greatereq_tup_second.fdl  index_of_bool.fdl  let_not_rec.fdl  letrec_env_down.fdl  or_tup_first.fdl  same_name_fun_arg.err  times_tup_first.fdl  too_few_args_lam.fdl  too_many_args_lam.err  unpack_too_few_bindings.err
assignment-8/input/do_pass/: cyclic_funs.out  decl_blank_tup.fdl  funcs.fdl  lam_fun_arg_bool.fdl  letrec_env_up.fdl  many_duped_fun_names.fdl  nested_tup.out  self_rec.fdl  small_example.fdl  sort.out  tuple_double_equals_true.fdl  tuple_get_set.fdl
assignment-8/input/dont_pass/: eval_order1.fdl
assignment-9/: .ocamlformat  Makefile  assembly.ml  compile.ml  dune  exprs.ml  gc.c  gc.h  gen_tests.py  main.c  main.ml  phases.ml  pretty.ml  runner.ml  test.ml
doc/: exception_handling.mld  testing.mld
executable/: config.mli  dune  viperc.ml
final-project/: Makefile  README.md  assembly.ml  compile.ml  except.c  except.h  exprs.ml  gc.c  gc.h  gen_tests.py  graph.ml  lexer.mll  main.c  parser.mly  phases.ml  pretty.ml  runner.ml  test.ml
scripts/: build-docs.sh  gen_tests.py  server.py
src/: .ocamlformat-ignore  Makefile  anf.ml  assembly.ml  codegen.ml  compile.ml  compile.mli  compile_anf.ml  compile_constants.ml  compile_desugar.ml  compile_env_helpers.ml  compile_free_vars.ml  compile_rename.ml  compile_runtime_env.ml  compile_scope.ml  compile_utils.ml  constants.ml  desugar.ml  dune  env.ml  exprs.ml  free_vars.ml  graph.ml  lexer.mll  liveness.ml  main.c  naive_alloc.ml  parser.mly  phases.ml  pretty.ml  register_alloc.ml  rename.ml  run  runner.ml  test.ml  util.ml  well_formed.ml
src/doc/: built_in_functions.mld  data_types.mld  dune  index.mld  overview.mld  testing.mld
src/input/do_err/: README  try_no_match_err.viper
src/input/do_pass/: bites.viper  test_pred1.out  try_imm_raise5.viper  try_imm_raise_err2.viper
src/input/dont_pass/: README
src/scripts/: build-docs.sh  server.py
starter-adder/: .gitignore  run.sh  sexp.ml
syntax-highlighting/: .vscodeignore  LICENSE  README.md  generate_release_notes.sh  generate_textmate_bundle.py  highlight_test.viper  language-configuration.json  package.json
test/: dune  test.ml  test_builtins.ml  test_desugar.ml  test_env.ml  test_errors.ml  test_exprs.ml  test_float.ml  test_funcs.ml  test_garter.ml  test_parser.ml  test_racer.ml  test_util.ml  test_well_formed.ml
(+379 files in other folders)
