opam-version: "2.0"
name: "viper"
version: "dev"
synopsis: "The ViPER programming language"
description: """
ViPER is a functional programming language written in OCaml with a C runtime. It is compiled to x86 assembly.
"""
homepage: "https://github.com/jekhi5/ViPER-compiler"
bug-reports: "https://github.com/jekhi5/ViPER-compiler/issues"
license: "MIT"

dev-repo: "git+https://github.com/jekhi5/ViPER-compiler.git"

maintainer: [
    "Jacob Kline"
    "Emery Jacobowitz"
]
authors: [
    "Jacob Kline"
    "Emery Jacobowitz"
]

depends: [
    "dune" {>= "3.21.0"}
    "extlib" {>= "1.8.0"}
    "menhir" {build}
    "ocaml" {>= "5.2.1"}
    "ocamlbuild" {build}
    "ocamlfind" {build}
    "ocamlformat" {>= "0.26.0"}
    "odoc" {with-doc}
    "ounit2" {>= "2.2.7"}
    "bisect_ppx" {dev & >= "2.5.0"}
    "bisect_ppx-ocamlbuild" {dev}
]

pin-depends: [
  ["bisect_ppx-ocamlbuild.dev" "git+https://github.com/aantron/bisect_ppx-ocamlbuild.git"]
]

build: [
    [make]
    [make "test"] {with-test}
    [make "doc"] {with-doc}   
]