(library
 (name viper_impl)
 (modules
  assembly
  compile
   compile_anf
   compile_constants
   compile_desugar
   compile_env_helpers
   compile_free_vars
   compile_rename
   compile_runtime_env
   compile_scope
   compile_utils
  errors
  exprs
  phases
  pretty
  runner
  lexer
  parser
  graph)
 (libraries ounit2 extlib unix)
 (wrapped false))

(ocamllex
 (modules lexer))

(menhir
 (modules parser))

(executable
 (name main)
 (modules main)
 (libraries viper_impl))

(test
 (name test)
 (modules test)
 (libraries viper_impl))

(env
 (dev
  (flags
   ; (:standard -warn-error -A)
   (:standard -warn-error -A -w -26 -w -27 -w -32 -w -33 -w -39 -w -66))))
