(library
 (name viper_impl)
 (modules
  assembly
  compile
  util
  constants
  env
  well_formed
  desugar
  rename
  anf
  free_vars
  naive_alloc
  liveness
  register_alloc
  codegen
  errors
  exprs
  phases
  pretty
  runner
  lexer
  parser
  graph)
 (libraries ounit2 extlib unix)
 (wrapped false))

(ocamllex
 (modules lexer))

(menhir
 (modules parser))

(executable
 (name main)
 (modules main)
 (libraries viper_impl))
